[SD-59] Fix checkout's 'OR' separator on iOS

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -433,6 +433,7 @@
       display: table;
       white-space: nowrap;
       position: relative;
+      width: 100%;
       &:before,
       &:after {
         border-top: 1px solid theme-color("image-background");
